update local template from remote and use it again (if there's a reason not to have it local, please leave a comment..)

--- a/doc/css_market/02_template.css
+++ b/doc/css_market/02_template.css
@@ -2,128 +2,129 @@
 
 /* Add local styling here, instead of modifying style.css. */
 
-/* This stylesheet is based on 02 Template http://www.openwebdesign.org/viewdesign.phtml?id=3057 
-   by jarico http://www.openwebdesign.org/userinfo.phtml?user=jcarico
-
-   modifications for ikiwiki by Martin Wuertele <web@wuertele.net>
+/* This stylesheet is based on 02 Template
+   (http://www.openwebdesign.org/viewdesign.phtml?id=3057)
+   by jarico (http://www.openwebdesign.org/userinfo.phtml?user=jcarico)
 
    License: public domain
+
+   modifications for ikiwiki by Martin Wuertele <web@wuertele.net>
 */
 
 /******** General tags ********/
 
 body{
-        padding:0;
-        margin:0;
-        border:none;
-        font-family:georgia, arial;
-        font-size:12px;
-        background:url(images/bg.png) repeat-x top #4B546B;
-        /*background:#4B546B;*/
-        color:#000000;
+	padding:0;
+	margin:0;
+	border:none;
+	font-family:georgia, arial;
+	font-size:12px;
+	background:url(images/bg.png) repeat-x top #4B546B;
+	/*background:#4B546B;*/
+	color:#000000;
 }
 
 #pagestyle{
-        width:80%;
-        padding-top:5px;
-        padding-bottom:5px;
-        padding-left:5px;
-        padding-right:5px;
-        margin:0 auto;
-        border:none;
-        background-color:#FFFFFF;
+	width:80%;
+	padding-top:5px;
+	padding-bottom:5px;
+	padding-left:5px;
+	padding-right:5px;
+	margin:0 auto;
+	border:none;
+	background-color:#FFFFFF;
 
 }
 
 #pagehead{
-        background:url(images/header.png) no-repeat center #808080;
-        height:203px;
+	background:url(images/header.png) no-repeat center #808080;
+	height:203px;
 }
 
 a{
-        margin:0;
-        padding:0;
-        border-bottom:1px #8994AF dotted;
-        border-top:none;
-        border-left:none;
-        border-right:none;
-        background-color:transparent;
-        color:#000000;
-        display:inline;
-        color:#8994AF;
-        text-decoration:none;
+	margin:0;
+	padding:0;
+	border-bottom:1px #8994AF dotted;
+	border-top:none;
+	border-left:none;
+	border-right:none;
+	background-color:transparent;
+	color:#000000;
+	display:inline;
+	color:#8994AF;
+	text-decoration:none;
 }
 
 a:hover{
-        margin:0;
-        padding:0;
-        border-bottom:1px #4B556A dotted;
-        border-top:none;
-        border-left:none;
-        border-right:none;
-        background-color:transparent;
-        color:#000000;
-        display:inline;
-        color:#4B556A;
-        text-decoration:none;
+	margin:0;
+	padding:0;
+	border-bottom:1px #4B556A dotted;
+	border-top:none;
+	border-left:none;
+	border-right:none;
+	background-color:transparent;
+	color:#000000;
+	display:inline;
+	color:#4B556A;
+	text-decoration:none;
 }
 
 a img{
-        border:0;
+	border:0;
 }
 
 p{
-        margin:0 0 18px 10px;
+	margin:0 0 18px 10px;
 }
 
 pre{
-        margin:0 0 18px 10px;
+	margin:0 0 18px 10px;
 }
 
 ul,ol,dl{
 }
 
 ul ul,ol ol{
-        margin:4px 0 4px 35px;
+	margin:4px 0 4px 35px;
 }
 
 h1{
-        font-family:georgia, arial;
-        font-size:16px;
-        color:#4A5368;
-        text-transform:uppercase;
-        font-weight:bold;
-        padding:0;
-        margin-top:0;
-        margin-bottom:5px;
-        margin-left:auto;
-        margin-right:auto;
+	font-family:georgia, arial;
+	font-size:16px;
+	color:#4A5368;
+	text-transform:uppercase;
+	font-weight:bold;
+	padding:0;
+	margin-top:0;
+	margin-bottom:5px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 h2{
-        font-family:georgia, arial;
-        font-size:14px;
-        color:#4A5368;
-        text-transform:uppercase;
-        font-weight:bold;
-        padding:0;
-        margin-top:0;
-        margin-bottom:5px;
-        margin-left:auto;
-        margin-right:auto;
+	font-family:georgia, arial;
+	font-size:14px;
+	color:#4A5368;
+	text-transform:uppercase;
+	font-weight:bold;
+	padding:0;
+	margin-top:0;
+	margin-bottom:5px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 h3{
-        font-family:georgia, arial;
-        font-size:12px;
-        color:#4A5368;
-        text-transform:uppercase;
-        font-weight:bold;
-        padding:0;
-        margin-top:0;
-        margin-bottom:5px;
-        margin-left:auto;
-        margin-right:auto;
+	font-family:georgia, arial;
+	font-size:12px;
+	color:#4A5368;
+	text-transform:uppercase;
+	font-weight:bold;
+	padding:0;
+	margin-top:0;
+	margin-bottom:5px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 blockquote{
@@ -136,43 +137,43 @@ blockquote{
 }
 
 .header{
-        width:auto;
-        border:none;
-        padding-top:1px;
-        padding-bottom:10px;
-        padding-left:5px;
-        padding-right:5px;
-        text-align:left;
-        margin:0;
-        height:20px;
-        line-height:20px;
-        font-family:georgia, arial;
-        font-size:12px;
-        color:#808080;
+	width:auto;
+	border:none;
+	padding-top:1px;
+	padding-bottom:10px;
+	padding-left:5px;
+	padding-right:5px;
+	text-align:left;
+	margin:0;
+	height:20px;
+	line-height:20px;
+	font-family:georgia, arial;
+	font-size:12px;
+	color:#808080;
 }
 
 .actions {
-        border-bottom: none;
+	border-bottom: none;
 }
 
 #backlinks{
-        width:auto;
-        border:none;
-        padding-top:0;
-        padding-bottom:1px;
-        padding-left:5px;
-        padding-right:5px;
-        text-align:right;
-        margin:0;
-        height:20px;
-        line-height:20px;
-        font-family:georgia, arial;
-        font-size:12px;
-        color:#808080;
+	width:auto;
+	border:none;
+	padding-top:0;
+	padding-bottom:1px;
+	padding-left:5px;
+	padding-right:5px;
+	text-align:right;
+	margin:0;
+	height:20px;
+	line-height:20px;
+	font-family:georgia, arial;
+	font-size:12px;
+	color:#808080;
 }
 
 div.tags {
-        border: none;
+	border: none;
 }
 
 #content{
@@ -182,67 +183,67 @@ div.tags {
 }
 
 #pageinfo {
-        border: none;
+	border: none;
 }
 
 .inlinepage {
-        border:none;
-        padding:5px 10px;
-        margin:0
+	border:none;
+	padding:5px 10px;
+	margin:0
 }
 
 .inlinepage .header {
-        font-family:georgia, arial;
-        font-size:16px;
-        color:#4A5368;
-        text-transform:uppercase;
-        font-weight:bold;
-        padding:0;
-        margin-top:0;
-        margin-bottom:5px;
-        margin-left:auto;
-        margin-right:auto;
+	font-family:georgia, arial;
+	font-size:16px;
+	color:#4A5368;
+	text-transform:uppercase;
+	font-weight:bold;
+	padding:0;
+	margin-top:0;
+	margin-bottom:5px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 #tags {
-        border: none;
+	border: none;
 } 
 
 /******** Content variations ********/
 
 .feedbutton {
-        color:#ffffff;
-        font-size:0.9em;
-        background-color:#4088b8;
-        border:1px solid #c8c8c8;
-        line-height:1.3em;
-        padding: 0px 0.5em 0px 0.5em;
+	color:#ffffff;
+	font-size:0.9em;
+	background-color:#4088b8;
+	border:1px solid #c8c8c8;
+	line-height:1.3em;
+	padding: 0px 0.5em 0px 0.5em;
 }
 
 /*.feedbutton:hover {
-        color: #4088b8 !important;
-        background: #ffffff;
+	color: #4088b8 !important;
+	background: #ffffff;
 }*/
 
 
 /******** sidebar ********/
 
 #sidebar{
-        float:right;
-        width:175px;
-        background-color:#FFFFFF;
-        border:1px #808080 solid;
-        padding:5px 10px;
-        margin:0;
-        height:100%
+	float:right;
+	width:175px;
+	background-color:#FFFFFF;
+	border:1px #808080 solid;
+	padding:5px 10px;
+	margin:0;
+	height:100%
 }
 
 #sidebar ul{
-        list-style:none;
+	list-style:none;
 }
 
 #sidebar li{
-        list-style:none;
+	list-style:none;
 }
 
 #sidebar li a{
@@ -255,39 +256,52 @@ div.tags {
 }
 
 #sidebar h1{
-        font-family:georgia, arial;
-        font-size:16px;
-        color:#4A5368;
-        text-transform:uppercase;
-        font-weight:bold;
-        padding:0;
-        margin-top:0;
-        margin-bottom:5px;
-        margin-left:auto;
-        margin-right:auto;
+	font-family:georgia, arial;
+	font-size:16px;
+	color:#4A5368;
+	text-transform:uppercase;
+	font-weight:bold;
+	padding:0;
+	margin-top:0;
+	margin-bottom:5px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 #sidebar h2{
-        margin:3px 0px 8px 0px;
+	margin:3px 0px 8px 0px;
 }
+
+
+/* CSS fixes */
+.popup:focus .balloon {
+	position: absolute;
+	display: inline;
+	margin: 1em 0 0 -2em;
+	padding: 0.625em;
+	border: 2px solid;
+	background-color: #dee;
+	color: black;
+}
+
 
 
 /******** Footer ********/
 #footer{
-        clear:both;
-        text-align:right;
-        color:#808080;
-        border-top:1px #808080 solid;
-        margin:0 auto;
-        padding:8px 0;
+	clear:both;
+	text-align:right;
+	color:#808080;
+	border-top:1px #808080 solid;
+	margin:0 auto;
+	padding:8px 0;
 }
 
 .pagedate{
-        text-size:small;
-        text-align:right;
-        margin:0;
-        font-family:georgia, arial;
-        font-size:10px;
-        color:#808080;
-        padding:8px 0;
+	font-size:small;
+	text-align:right;
+	margin:0;
+	font-family:georgia, arial;
+	font-size:10px;
+	color:#808080;
+	padding:8px 0;
 }
